# Digo-the-Scribe

./: .env.example  .gitignore  CFV_INTEGRATION.md  CHANGELOG.md  CONTRIBUTING.md  README.md  config  pyproject.toml
.github/workflows/: cfv-daily-report.yml  ci.yml
config/: client_secret_630168543188-ucad2geum602609saebimd9ebjj18aii.apps.googleusercontent.com.json  client_secret_630168543188-uoekqc2g65gq1bo2rimb4b7r6llfhmmc.apps.googleusercontent.com.json
resources/: README.txt
src/digo/: __init__.py  agent.py  audio_listener.py  cfv_client.py  cfv_data_store.py  cfv_reporter.py  cli.py  config.py  google_auth.py  google_meet.py  meeting_transcript.py  pdf_processor.py  prompts.py
tests/: conftest.py  test_agent.py  test_audio_listener.py  test_cfv_client.py  test_cfv_data_store.py  test_cfv_reporter.py  test_cli.py  test_config.py  test_google_auth.py  test_google_meet.py  test_meeting_transcript.py  test_pdf_processor.py
